--- a/templates/employee_home.html
+++ b/templates/employee_home.html
@@ -148,7 +148,7 @@
                     <button type="button" class="inspection-rejection__add" data-action="add-rejection-row">Add rejection reason</button>
                   </div>
                   <div class="inspection-rejection__table">
-                    <table>
+                    <table class="inspection-rejection__table-grid">
                       <caption class="sr-only">Rejected assemblies and associated reasons</caption>
                       <thead>
                         <tr>
