--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,19 @@
   >
     <div class="dashboard-card">
       <h2>Bug Reports</h2>
-      <canvas id="bugReportsPreview"></canvas>
+      <table id="bugReportsPreviewTable" class="dashboard-card__table">
+        <thead>
+          <tr>
+            <th scope="col">Status</th>
+            <th scope="col">Reports</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="2">Loading…</td>
+          </tr>
+        </tbody>
+      </table>
       <p id="bugReportsInfo" class="dashboard-card__info">Loading bug report summary…</p>
     </div>
   </a>
@@ -44,7 +56,19 @@
   >
     <div class="dashboard-card">
       <h2>Tracker Analytics</h2>
-      <canvas id="trackerAnalyticsPreview"></canvas>
+      <table id="trackerAnalyticsPreviewTable" class="dashboard-card__table">
+        <thead>
+          <tr>
+            <th scope="col">Metric</th>
+            <th scope="col">Count</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="2">Loading…</td>
+          </tr>
+        </tbody>
+      </table>
       <p id="trackerAnalyticsInfo" class="dashboard-card__info">Loading tracker analytics…</p>
     </div>
   </a>
