--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,7 @@
             <div class="dropdown" role="menu">
               {{ feature_nav_link('AOI Integrated Report', url_for('main.integrated_report'), 'reports_integrated') }}
               {{ feature_nav_link('Operator Report', url_for('main.operator_report'), 'reports_operator') }}
+              {{ feature_nav_link('Line Report', url_for('main.line_report'), 'reports_line') }}
               {{ feature_nav_link('AOI Daily Report', url_for('main.aoi_daily_report_page'), 'reports_aoi_daily') }}
             </div>
           </li>
