Update DPM saved charts with new presets

--- a/templates/dpm_analysis.html
+++ b/templates/dpm_analysis.html
@@ -203,6 +203,7 @@
       </div>
       <div id="dpm-info" class="preview-info" style="margin-top:4px;"></div>
       <div id="chart-description-result" class="preview-info" style="margin-top:4px;"></div>
+      <pre id="saved-chart-sql" class="preview-info" style="margin-top:4px; display:none; white-space:pre-wrap;"></pre>
       <small>Control limits shown: mean (blue), UCL/LCL (red/green).</small>
     </div>
   </div>
